[gd_scene load_steps=4 format=3 uid="uid://choyxwrwfrhf3"]

[ext_resource type="Script" path="res://Scripts/xp_shard.gd" id="1_4mur8"]
[ext_resource type="Texture2D" uid="uid://bk4h3qqauenaw" path="res://Assets/xpshard.svg" id="2_kkbnd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tg126"]
radius = 233.523

[node name="xpShard" type="Node2D"]
rotation = 0.785398
scale = Vector2(0.085, 0.085)
script = ExtResource("1_4mur8")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.419608, 0.635294, 0.286275, 1)
rotation = -0.785398
texture = ExtResource("2_kkbnd")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 65

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_tg126")

[node name="BlinkingTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="DisappearTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="BlinkingTimer" to="." method="_on_blinking_timer_timeout"]
[connection signal="timeout" from="DisappearTimer" to="." method="_on_disappear_timer_timeout"]
